# pyironFileReader

./: README.md  pyproject.toml
.github/workflows/: python-tests.yml
Examples/: example_01.py  generate_example_data_01.py
examples/: example_01.py  generate_example_data_01.py
src/pyironFileReader/: __init__.py
tests/: test_filereader.py
