[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyironFileReader"
version = "2023.2"
description = "OVITO Python file reader for the h5 data containers written by pyiron."
keywords = ["ovito", "python-file-reader"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.1",
    "h5py"
]

[project.urls]
repository = "https://github.com/nnn911/pyironFileReader"

[project.entry-points.'OVITO.FileReader']
"pyiron File Reader" = "pyironFileReader:PyironFileReader"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]